@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>17</version>
+            <version>21</version>
         </dependency>
 
         <!-- Junit -->
@@ -36,13 +36,14 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.2.0</version>
+            <version>11.2.1</version>
         </dependency>
-
 
     </dependencies>
 
     <build>
+        <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>test</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -55,15 +56,15 @@
                 <version>0.0.8</version>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running -->
-                        <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>spreadsheet.View.App</mainClass>
-                            <jvmArgs>
-                                --add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED
-                                --enable-native-access=javafx.graphics
-                            </jvmArgs>
+                            <options>
+                                <option>--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
